# ChangeLog for gnome-base/nautilus
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.68 2003/12/13 19:54:04 spider Exp $

*nautilus-2.4.1-r2 (13 Dec 2003)

  13 Dec 2003; <spider@gentoo.org> nautilus-2.4.1-r2.ebuild:
  Recommiting as -r2

  07 Dec 2003; foser <foser@gentoo.org> nautilus-2*.ebuild :
  Dep fix fam-oss > fam due to move

*nautilus-2.4.1-r1 (16 Nov 2003)

  16 Nov 2003; Spider <spider@gentoo.org> nautilus-2.4.1-r1.ebuild,
  files/nautilus-2-disable-cdda.patch:
  Add a fix to disable random linking to cdparanoia without telling maintainers
  or developers. This should hopefully go into stable ASAP.

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> nautilus-2.4.0.ebuild:
  Stable on ia64

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> nautilus-2.4.0.ebuild:
  set ppc in keywords

*nautilus-2.4.1 (21 Oct 2003)

  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> nautilus-2.4.0.ebuild :
  Marked stable on hppa.

  21 Oct 2003; foser <foser@gentoo.org> nautilus-2.4.0.ebuild :
  New version, fix automake stuff for cups
  Add patch to support audio preview via gst (by <foser@gentoo.org>)

  17 Oct 2003; Aron Griffis <agriffis@gentoo.org> nautilus-2.4.0.ebuild:
  Stable on alpha

  05 Oct 2003; Mike Gardiner <obz@gentoo.org> nautilus-2.4.0.ebuild:
  Marked stable on x86

  05 Oct 2003; Mike Gardiner <obz@gentoo.org> nautilus-2.4.0.ebuild,
  files/nautilus-2.4-startup-bonobo.patch:
  Added patch to fix bug #28778 for nautilus-2.4.0. Shouldnt be required after
  this version

  13 Sep 2003; <spider@gentoo.org> nautilus-2.4.0.ebuild:
  Fixing the HOMEPAGE tag

  12 Sep 2003; Alastair Tse <liquidx@gentoo.org> nautilus-2.0.7.ebuild,
  nautilus-2.2.1.ebuild, nautilus-2.2.3.ebuild, nautilus-2.2.4-r5.ebuild,
  nautilus-2.2.4.ebuild:
  removing bonobo-activation deps

*nautilus-2.4.0 (09 Sep 2003)

  09 Sep 2003; foser <foser@gentoo.org> nautilus-2.4.0.ebuild :