@@ -1,10 +1,9 @@
-MD5 f8419b08f76edf76607d9c9ef337eb06 ChangeLog 10136
+MD5 720a807f93b5f8f834a961f482a25a82 ChangeLog 10277
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 cae5c71ff02a8e3a6a125d25f4a1f9ed nautilus-1.0.6-r9.ebuild 3516
-MD5 f2b63cf6a665984079188c51b64d597b nautilus-2.4.1-r2.ebuild 1960
+MD5 5e93427bcf9a99f9a12222c5a7d2ee2d nautilus-2.4.1-r2.ebuild 1959
 MD5 559d579e057b4f9d2892cb76ce5a2c68 nautilus-2.4.0.ebuild 1673
 MD5 d386ddd18a960e36e9184856886ee582 nautilus-2.4.1.ebuild 1949
-MD5 d443adfa1b1bfc4f538e9fe862e1cf43 nautilus-2.4.1-r1.ebuild 1849
 MD5 4c62404b0162ab39572cb522fed222c4 files/nautilus-1.0.6-hyperbola.diff 1632
 MD5 3db7f854e279f4032b8d1e86d64157aa files/digest-nautilus-1.0.6-r9 68
 MD5 edea17bb51bbdc0ffbeb076961b25b21 files/digest-nautilus-2.4.1-r2 68
@@ -20,7 +19,6 @@ MD5 b6616981e10e2a9725840198f3b29d15 files/nautilus-2-x-printers.patch 39941
 MD5 4792b2819e2384304f5a63008db5b9f6 files/nautilus-2-icon_view_gst_audio_preview.patch 8305
 MD5 94955c8317b2f5742603a9dd1d656ed3 files/nautilus-2.2-double_menu_entry_fix.patch 1322
 MD5 65769439a2d335132210b34a49905531 files/nautilus-2.4-startup-bonobo.patch 677
-MD5 edea17bb51bbdc0ffbeb076961b25b21 files/digest-nautilus-2.4.1-r1 68
 MD5 63d8d3d2f44b839065888ee8338f5f46 files/nautilus-2-disable-cdda.patch 314
 MD5 7cb2f285f24e86a90c6a65b0b9356d39 files/macros/gnome.m4 16426
 MD5 486b971d706aec59655a72282d3feb0b files/macros/nautilus-macros.m4 7993
