@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.4.1-r2.ebuild,v 1.1 2003/12/13 19:54:04 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.4.1-r2.ebuild,v 1.2 2003/12/15 23:13:32 spider Exp $
 
 inherit gnome2
 
@@ -8,7 +8,7 @@ DESCRIPTION="A filemanager for the Gnome2 desktop"
 HOMEPAGE="http://www.gnome.org/projects/nautilus/"
 SLOT="0"
 LICENSE="GPL-2 LGPL-2 FDL-1.1"
-KEYWORDS="~x86 ~ppc ~alpha ~sparc ~hppa ~amd64"
+KEYWORDS="x86 ~ppc ~alpha ~sparc ~hppa ~amd64"
 IUSE="oggvorbis cups gstreamer"
 
 RDEPEND=">=dev-libs/glib-2
